--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Data Scientist &amp; Statistician">
     <meta property="og:description" content="Hello, I am Pedro. This is my portfolio.">
+    <meta name="description"
+        content="Data Scientist & Statistician portfolio. Expertise in Machine Learning, Predictive Modeling, and Data Visualization.">
     <meta property="og:image" content="https://pcdelcampon.github.io/portfolio/assets/img/PCDCN8bits.png">
     <meta property="og:url" content="https://pcdelcampon.github.io/portfolio/">
     <meta name="twitter:card" content="summary_large_image">
@@ -77,7 +79,8 @@
                     </span>
                     <div
                         class="pointer-events-none absolute left-1/2 -translate-x-1/2 top-full mt-3 w-14 sm:w-20 bg-slate-900/90 border border-slate-700 shadow-xl rounded-xl p-2 opacity-0 group-hover:opacity-100 transition-opacity duration-200">
-                        <img src="assets/img/PCDCN8bits.png" alt="PedroC retro avatar" class="w-full h-auto rounded-lg">
+                        <img src="assets/img/PCDCN8bits.png" alt="PedroC retro avatar" class="w-full h-auto rounded-lg"
+                            width="80" height="80">
                     </div>
                 </div>
                 <div class="flex items-center gap-4">
@@ -105,19 +108,19 @@
                         <button id="btn-es"
                             class="lang-btn flex items-center px-2 py-1 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <img src="https://flagcdn.com/w40/es.png" alt="Español" title="Español"
-                                class="w-6 h-6 rounded-full">
+                                class="w-6 h-6 rounded-full" width="24" height="24">
                         </button>
                         <button id="btn-en"
                             class="lang-btn flex items-center px-2 py-1 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <img src="https://flagcdn.com/w40/gb.png" alt="English" title="English"
-                                class="w-6 h-6 rounded-full">
+                                class="w-6 h-6 rounded-full" width="24" height="24">
                         </button>
-                        <button id="theme-toggle"
+                        <button id="theme-toggle" aria-label="Toggle Dark Mode"
                             class="lang-btn theme-btn flex items-center justify-center w-9 h-9 rounded-full shadow-sm transition-all hover:scale-105 hover:ring-2 hover:ring-cyan-400/60">
                             <i class="fa-solid fa-moon"></i>
                         </button>
                     </div>
-                    <button id="nav-toggle"
+                    <button id="nav-toggle" aria-label="Open Mobile Menu"
                         class="md:hidden flex items-center justify-center w-12 h-12 rounded-full bg-brand-600 text-white shadow-xl border border-brand-500/80 hover:bg-brand-500 hover:scale-105 hover:ring-2 hover:ring-white/60 transition focus:outline-none focus:ring-2 focus:ring-white/70">
                         <i class="fa-solid fa-bars text-2xl drop-shadow"></i>
                     </button>
@@ -149,7 +152,7 @@
                     <a href="#projects"
                         class="inline-flex items-center justify-center px-7 py-3 rounded-full font-semibold shadow-lg hover:shadow-xl transition-all btn-hero"
                         data-i18n="btn_case_studies">View projects</a>
-                    <a href="https://www.linkedin.com/in/pcdelcampon" target="_blank"
+                    <a href="https://www.linkedin.com/in/pcdelcampon" target="_blank" rel="noopener noreferrer"
                         class="btn-outline btn-linkedin inline-flex items-center justify-center px-7 py-3 rounded-full border-2 text-white font-semibold gap-2 hover:bg-cyan-300/10 transition-all"
                         data-i18n="btn_linkedin"><i class="fa-brands fa-linkedin"></i> LinkedIn</a>
                     <a href="#contact"
@@ -275,7 +278,7 @@
                             <a href="projects/anuario-movilidad.html"
                                 class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
                                 <img src="assets/img/Bogota_trafic_Accidents.webp" alt="Bogota Road Safety preview"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-cover" width="360" height="176" loading="lazy">
                             </a>
                             <div class="p-5 space-y-3">
                                 <div class="flex items-start justify-between gap-2">
@@ -307,7 +310,7 @@
                             <a href="projects/cluster-carac.html"
                                 class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
                                 <img src="assets/img/ClusterCarac_IA001.webp" alt="ClusterCarac preview"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-cover" width="360" height="176" loading="lazy">
                             </a>
                             <div class="p-5 space-y-3">
                                 <div class="flex items-start justify-between gap-2">
@@ -339,7 +342,7 @@
                             <a href="projects/factoclass.html"
                                 class="h-44 bg-slate-800 flex items-center justify-center overflow-hidden block">
                                 <img src="assets/img/FactoClass_template.webp" alt="FactoClass preview"
-                                    class="w-full h-full object-cover">
+                                    class="w-full h-full object-cover" width="360" height="176" loading="lazy">
                             </a>
                             <div class="p-5 space-y-3">
                                 <div class="flex items-start justify-between gap-2">
@@ -401,10 +404,10 @@
                 data-i18n="footer_cta">Say Hello</a>
         </div>
         <div class="flex justify-center gap-8 text-3xl text-slate-400">
-            <a href="https://www.linkedin.com/in/pcdelcampon" target="_blank" class="hover:text-white"><i
-                    class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/pcdelcampon" target="_blank" class="hover:text-white"><i
-                    class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/pcdelcampon" target="_blank" rel="noopener noreferrer"
+                class="hover:text-white"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/pcdelcampon" target="_blank" rel="noopener noreferrer"
+                class="hover:text-white"><i class="fa-brands fa-github"></i></a>
         </div>
         <div class="mt-10 text-sm text-slate-600 font-mono" data-i18n="footer_copy">&copy; 2024 Pedro C. Del Campo.
             Gracias a VibeCoding por hacer este portafolio posible.</div>
