--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     </section>
 
     <!-- About Section -->
-    <section id="about" class="py-20 relative">
+    <section id="about" class="py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-start">
                 <div>
@@ -263,7 +263,7 @@
                 </div>
             </div>
         </div>
-        <div class="absolute inset-x-0 bottom-5 flex justify-center z-20">
+        <div class="w-full flex justify-center mt-12 z-20">
             <a href="#projects" aria-label="Scroll to projects"
                 class="animate-bounce p-2 cursor-pointer text-slate-500 hover:text-brand-500 transition-colors">
                 <i class="fa-solid fa-chevron-down text-xl"></i>
@@ -271,7 +271,7 @@
         </div>
     </section>
     <!-- Projects Section -->
-    <section id="projects" class="py-20 bg-slate-900/50 relative">
+    <section id="projects" class="py-20 bg-slate-900/50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <h2 class="text-3xl font-bold mb-12 flex items-center gap-3">
                 <span class="text-brand-500 font-mono text-2xl">02.</span> <span
@@ -380,7 +380,7 @@
                     </div>
                 </div>
             </div>
-            <div class="absolute inset-x-0 bottom-5 flex justify-center z-20">
+            <div class="w-full flex justify-center mt-12 z-20">
                 <a href="#contact" aria-label="Scroll to contact"
                     class="animate-bounce p-2 cursor-pointer text-slate-500 hover:text-brand-500 transition-colors">
                     <i class="fa-solid fa-chevron-down text-xl"></i>
