Optimize codebase: refactor CSS/JS redundancies and update docs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <link rel="stylesheet" href="assets/css/theme.css">
 
     <!-- Math & Viz Libraries -->
-    <!-- D3 and Katex removed for optimization -->
+    <!-- Libraries removed for optimization -->
 
     <script>
         tailwind.config = {
